--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
   <div class="container">
     <img src="app-icon.png" alt="App Icon" class="icon" />
-    <h1 class="app-name">Tên Ứng Dụng</h1>
-    <p class="bundle-id">com.ten.ungdung</p>
+    <h1 class="app-name">TFT mùa 15</h1>
+    <p class="bundle-id">SMPhuc.github.io</p>
     <a class="install-btn" href="itms-services://?action=download-manifest&url=https://smphuc.github.io/ios-app-install/manifest.plist">
       Cài đặt ứng dụng
     </a>
